--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
 .App {
   text-align: center;
 }
+
+.column-title {
+  background-color: teal;
+  padding: 0 10px;
+  height: 30px;
+  margin: 0 0 5px 0;
+}
+
+.column-item {
+  background-color: grey;
+  padding: 10px;
+  margin: 5px 0 5px 0;
+}
+
+.column-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.column {
+  margin: 0 0 0 25px;
+  display: flex;
+  flex-direction: column;
+}
